# uk-politics-module

./: .gitignore  .pylintrc  MANIFEST.in  README.md  license.md  makefile  pytest.ini  setup.cfg  setup.py
src/data/: GE_results.tsv.licence  party_colors.csv.licence  party_nicknames.csv  party_nicknames.csv.licence
src/uk_politics/: __init__.py  colors.py  data_tables.py  elections.py  exceptions.py  location.py  names.py
src/uk_politics/data/: GE_results.tsv  party_colors.csv
test/: test_colors.py  test_data_tables.py  test_elections.py  test_init.py  test_location.py  test_names.py  test_results.py
