[metadata]
name = uk-politics
version = 1.0.0
description = United Kingdom political party names, colors, and election data
long_description = file: README.md
keywords = politics elections uk parties
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
package_dir=
    =src
packages = find:
install_requires =
    fuzzywuzzy
    pandas
test_requires = 
    pytest
