[metadata]
name = uk-politics
version = 1.0.0
description = United Kingdom political party names, colors, and election data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = politics elections uk parties
url = https://github.com/Stonehaven-Campaigns/uk-politics-module
maintainer_email = data-accounts@stonehaven.uk.com
maintainer = Stonehaven
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
package_dir=
    =src
packages = find:
install_requires =
    fuzzywuzzy
    pandas
test_requires = 
    pytest
